# Automation_Content

./: .gitignore  pyproject.toml
content_copy/: Agent.py  app.py
content_copy/segments/: n434ha4QwU0_speech.txt
content_copy/templates/: download.html  index.html
content_copy/utils/: AgentTools.py  OutputHandler.py  SoundHandler.py  TextHandler.py  Whisper.py
